--- a/home/static/sass/variables.scss
+++ b/home/static/sass/variables.scss
@@ -5,3 +5,9 @@ $color-grey: #F3F4F6;
 $color-concrete: #555555;
 $color-steel: #898B8E;
 $color-slate: #282828;
+
+$break-large-tablet: 1024px;
+$break-small-tablet: 768px;
+$break-large-phone: 480px;
+
+$side-gutter: 60px;
