--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -22,7 +22,7 @@
             <div class="header__logo__subheading">CONSULTANCY</div>
         </a>
         <div class="header__button-container">
-            <a class="button button--white-border" href="{% url 'contact' %}">Contact Us</a>
+            <a class="button button--white-border" href="{% url 'contact' %}">Contact</a>
         </div>
     </header>
 
