--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -18,13 +18,17 @@
     </section>
 
     <section class="content-section">
-        <img class="section-image" src="{% static 'img/tablet-app.jpg' %}"/>
+        <img class="section-image" src="{% static 'img/happy-builder.jpg' %}"/>
         <div class="text-block">
             <h3>About Bauhaus</h3>
             <p>
                 Bauhaus Consultancy is an invaluable resource to help you on your digital transformation journey.
+            </p>
+            <p>
                 Powerful software solutions are an important first step in helping your business maximise on profit,
                 increase productivity and save time.
+            </p>
+            <p>
                 The key to getting the most out of any software suite is training, pre-roll out consultancy and a
                 guiding hand transitioning your processes in to efficient digital workflows.
             </p>
@@ -32,37 +36,51 @@
                 This is where Bauhaus Consultancy comes in. We will work closely with your business and in partnership
                 with Procore to ensure that you absolutely get the most out of your investment, maximising user adoption
                 and best practice to help your business flourish.
+            </p>
+            <p>
                 Bauhaus Consultancy is a fully accredited Procore partner who work closely with Procore to help you get
                 the best out of a fully comprehensive, world class building project management tool.
-
             </p>
         </div>
     </section>
 
-    <section class="content-section">
+    <section class="content-section content-section--reverse">
+        <img class="section-image" src="{% static 'img/culture.jpg' %}"/>
         <div class="text-block">
             <h3>Our Culture</h3>
             <p>
                 Bauhaus Consultancy believes in people first.
+            </p>
+            <p>
                 We want to get to know and understand our clients as people with real life pressures and needs.
-                We pride ourselves on removing confusing jargon in order to deliver real solutions to real problems
-                that real people are experiencing.
+            </p>
+            <p>
+                We pride ourselves on removing confusing jargon in order to deliver real solutions to real problems that real people are experiencing.
             </p>
             <p>
                 If you have a question, ask it and enjoy a straight answer.
             </p>
         </div>
-        <img class="section-image" src="{% static 'img/culture.jpg' %}"/>
     </section>
 
     <section class="about-me-section">
-        <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}"/>
         <div class="text-block text-block--center">
+            <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}"/>
             <h4>Andrew Shaw, Director</h4>
             <p>
-                I have over ten years experience in helping companies like yours transition to digital alternatives and truly transforming your business processes.
-                I am passionate about understanding your company’s specific requirements and challenges, using this to guide you through your digital transformation journey as a trusted advisor. I will support and guide you, sometime even challenge you in order to deliver the very best service.
-                With a solid understanding of the construction industry and wealth of knowledge around Procore and its tools, I look forward to collaborating with you on a journey to success.
+                I have over ten years experience in helping companies like yours transition to digital alternatives and
+                truly transforming your business processes.
+            </p>
+            <p>
+                I am passionate about understanding your company’s specific requirements and challenges, using this to
+                guide you through your digital transformation journey as a trusted advisor.
+            </p>
+            <p>
+                I will support and guide you, sometime even challenge you in order to deliver the very best service.
+            </p>
+            <p>
+                With a solid understanding of the construction industry and wealth of knowledge around Procore and its
+                tools, I look forward to collaborating with you on a journey to success.
             </p>
         </div>
     </section>
