--- a/home/static/sass/contact.scss
+++ b/home/static/sass/contact.scss
@@ -17,7 +17,7 @@ $border-radius-second: $border-radius + 1;
   -webkit-align-self: center;
   align-self: center;
 
-  background: url('../img/welding.jpg') no-repeat;
+  background: url('../img/welding.jpg') no-repeat top;
   background-size: cover;
   width: 80%;
   margin: 44px;
@@ -31,7 +31,6 @@ $border-radius-second: $border-radius + 1;
   display: flex;
   flex-direction: column;
 
-  width: 40%;
   max-width: 400px;
   height: 100%;
   background-color: $color-white;
@@ -51,5 +50,11 @@ $border-radius-second: $border-radius + 1;
     background-color: $color-grey;
     border: none;
     padding: 5px;
+  }
+
+  @media only screen and (max-width: $break-small-tablet) {
+    max-width: none;
+    border-radius: $border-radius;
+    align-self: stretch;
   }
 }
