--- a/home/static/sass/homepage.scss
+++ b/home/static/sass/homepage.scss
@@ -21,6 +21,33 @@
     width: 50%;
     text-shadow: 2px 2px 4px $color-black;
   }
+
+  &__img {
+    display: none;
+    object-fit: cover;
+    width: 100%;
+  }
+
+  @media only screen and (max-width: $break-large-phone) {
+    -webkit-align-items: center;
+    align-items: center;
+
+    padding: 50px $side-gutter-mobile;
+    background: none;
+    height: unset;
+    color: $color-black;
+    text-align: center;
+
+    h2, h4 {
+      width: 100%;
+      text-shadow: none;
+    }
+
+    &__img {
+      display: unset;
+
+    }
+  }
 }
 
 .content-section {
@@ -61,6 +88,10 @@
 
   padding: 80px $side-gutter;
   text-align: center;
+
+  @media only screen and (max-width: $break-large-phone) {
+    padding: 50px $side-gutter-mobile;
+  }
 }
 
 .section-image {
@@ -83,6 +114,10 @@
   &--center {
     text-align: center;
     max-width: 900px;
+  }
+
+  @media only screen and (max-width: $break-large-phone) {
+    padding: 50px $side-gutter-mobile;
   }
 }
 
