--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -7,10 +7,12 @@
 {% block mainpage %}
 
     <section class="feature-image-section">
-        <h2>Accredited Procore Partner</h2>
-        <h4>Get a free consultation today</h4>
-        <a class="button" href="{% url 'contact' %}">Request a Demo</a>
+            <h2>Accredited Procore Partner</h2>
+            <h4>Get a free consultation today</h4>
+            <a class="button" href="{% url 'contact' %}">Request a Demo</a>
     </section>
+    <img class="feature-image-section__img" src="{% static 'img/procore-app.jpg' %}"/>
+
 
     <section class="procore-section">
         <h3>We help you get the most out of Procore</h3>
