--- a/home/static/css/global.css
+++ b/home/static/css/global.css
@@ -24,9 +24,19 @@ h2 {
   font-size: 60px;
   margin: 20px 0;
 }
+@media only screen and (max-width: 480px) {
+  h2 {
+    font-size: 50px;
+  }
+}
 
 h3 {
   font-size: 44px;
+}
+@media only screen and (max-width: 480px) {
+  h3 {
+    font-size: 40px;
+  }
 }
 
 h4 {
@@ -34,10 +44,20 @@ h4 {
   font-weight: 100;
   margin: 10px 0 30px;
 }
+@media only screen and (max-width: 480px) {
+  h4 {
+    font-size: 25px;
+  }
+}
 
 p {
   font-size: 18px;
   color: #555555;
+}
+@media only screen and (max-width: 480px) {
+  p {
+    font-size: 14px;
+  }
 }
 
 a {
@@ -73,6 +93,11 @@ a {
 }
 .button--white-border:hover {
   background-color: #ffffff;
+}
+@media only screen and (max-width: 480px) {
+  .button {
+    font-size: 16px;
+  }
 }
 
 .round-image {
@@ -112,14 +137,16 @@ a {
   font-weight: bold;
   margin: 5px 40px;
 }
+@media only screen and (max-width: 768px) {
+  .header__logo__subheading {
+    display: none;
+  }
+}
 @media only screen and (max-width: 480px) {
   .header__logo__img--mobile {
     display: unset;
   }
   .header__logo__img--desktop {
-    display: none;
-  }
-  .header__logo__subheading {
     display: none;
   }
 }
@@ -145,6 +172,29 @@ a {
 .feature-image-section h2, .feature-image-section h4 {
   width: 50%;
   text-shadow: 2px 2px 4px #000000;
+}
+.feature-image-section__img {
+  display: none;
+  object-fit: cover;
+  width: 100%;
+}
+@media only screen and (max-width: 480px) {
+  .feature-image-section {
+    -webkit-align-items: center;
+    align-items: center;
+    padding: 50px 20px;
+    background: none;
+    height: unset;
+    color: #000000;
+    text-align: center;
+  }
+  .feature-image-section h2, .feature-image-section h4 {
+    width: 100%;
+    text-shadow: none;
+  }
+  .feature-image-section__img {
+    display: unset;
+  }
 }
 
 .content-section {
@@ -181,6 +231,11 @@ a {
   padding: 80px 60px;
   text-align: center;
 }
+@media only screen and (max-width: 480px) {
+  .procore-section {
+    padding: 50px 20px;
+  }
+}
 
 .section-image {
   max-width: 50%;
@@ -201,6 +256,11 @@ a {
 .text-block--center {
   text-align: center;
   max-width: 900px;
+}
+@media only screen and (max-width: 480px) {
+  .text-block {
+    padding: 50px 20px;
+  }
 }
 
 .about-me-section {
