--- a/home/static/sass/variables.scss
+++ b/home/static/sass/variables.scss
@@ -8,7 +8,8 @@ $color-slate: #282828;
 
 $break-large-tablet: 1024px;
 $break-small-tablet: 768px;
-$break-large-phone: 480px;
+$break-large-phone: 570px;
+$break-small-phone: 420px;
 
 $side-gutter: 60px;
 $side-gutter-mobile: 20px;
