--- a/home/static/css/global.css
+++ b/home/static/css/global.css
@@ -288,17 +288,44 @@ a {
   justify-content: center;
 }
 
-footer {
+.footer {
   display: -webkit-flex;
-  display: flex;
   -webkit-justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+  display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   background-color: #282828;
-  padding: 15px;
+  text-align: center;
 }
-footer p {
+.footer a {
+  color: #898B8E;
+  font-weight: bold;
+}
+.footer a:hover {
+  color: #FF5200;
+}
+.footer p {
   font-size: 12px;
-  color: #ffffff;
+  color: #F3F4F6;
+  margin: 15px;
+}
+.footer__bauhaus {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  display: flex;
+  align-items: center;
+}
+.footer__social-icon {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  margin: 15px;
+}
+.footer__social-icon:hover {
+  cursor: pointer;
 }
 
 .contact-section {
