Fix to footer styling

--- a/home/static/css/global.css
+++ b/home/static/css/global.css
@@ -310,7 +310,7 @@ a {
   color: #F3F4F6;
   margin: 15px;
 }
-.footer__bauhaus {
+.footer__section {
   display: -webkit-flex;
   -webkit-align-items: center;
   display: flex;
