--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -32,12 +32,14 @@
     {% block mainpage %}{% endblock %}
 
     <footer class="footer">
-        <div class="footer__bauhaus">
+        <div class="footer__section">
             <p>Copyright Bauhaus Consultancy </p>
             <p><a href="{% url 'contact' %}">Contact us</a></p>
             <a class="footer__social-icon" target="_blank" href="https://uk.linkedin.com/in/andrewxenith/de"><span class="fab fa-linkedin fa-fw"></span></a>
         </div>
-        <p>Website by <a href="https://www.bonnieappleton.com">Bonnie Appleton</a></p>
+        <div class="footer__section">
+            <p>Website by <a href="https://www.bonnieappleton.com">Bonnie Appleton</a></p>
+        </div>
     </footer>
 </body>
 
