Make Bonnie's website open in a new tab

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -38,7 +38,7 @@
             <a class="footer__social-icon" target="_blank" href="https://uk.linkedin.com/in/andrewxenith/de"><span class="fab fa-linkedin fa-fw"></span></a>
         </div>
         <div class="footer__section">
-            <p>Website by <a href="https://www.bonnieappleton.com">Bonnie Appleton</a></p>
+            <p>Website by <a href="https://www.bonnieappleton.com" target="_blank">Bonnie Appleton</a></p>
         </div>
     </footer>
 </body>
