Alt text on images

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -11,7 +11,7 @@
             <h4>Get a free consultation today</h4>
             <a class="button" href="{% url 'contact' %}">Request a Demo</a>
     </section>
-    <img class="feature-image-section__img" src="{% static 'img/procore-app.jpg' %}"/>
+    <img class="feature-image-section__img" src="{% static 'img/procore-app.jpg' %}" alt="Procore app"/>
 
 
     <section class="procore-section">
@@ -20,7 +20,7 @@
     </section>
 
     <section class="content-section">
-        <img class="section-image" src="{% static 'img/happy-builder.jpg' %}"/>
+        <img class="section-image" src="{% static 'img/happy-builder.jpg' %}" alt="Happy builder"/>
         <div class="text-block">
             <h3>About Bauhaus</h3>
             <p>
@@ -47,7 +47,7 @@
     </section>
 
     <section class="content-section content-section--reverse">
-        <img class="section-image" src="{% static 'img/culture.jpg' %}"/>
+        <img class="section-image" src="{% static 'img/culture.jpg' %}" alt="Group of people on a construction site"/>
         <div class="text-block">
             <h3>Our Culture</h3>
             <p>
@@ -67,7 +67,7 @@
 
     <section class="about-me-section">
         <div class="text-block text-block--center">
-            <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}"/>
+            <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}" alt="Photo of Andrew Shaw"/>
             <h4>Andrew Shaw, Director</h4>
             <p>
                 I have over ten years experience in helping companies like yours transition to digital alternatives and
