--- a/home/static/sass/header.scss
+++ b/home/static/sass/header.scss
@@ -16,6 +16,7 @@ $white-stripe-height-mobile: 105px;
   justify-content: space-between;
 
   height: $header-height;
+  padding: 0 $side-gutter;
 
   background: linear-gradient(
                   180deg,
@@ -26,15 +27,16 @@ $white-stripe-height-mobile: 105px;
                   $color-slate $white-stripe-height);
   border-bottom: solid $color-white 3px;
 
+
   &__logo {
     display: -webkit-flex;
     display: flex;
 
     height: $header-height;
-    padding: 0 20px;
 
     &__img {
       height: 136px;
+      margin-right: 40px;
 
       &--mobile {
         display: none;
@@ -51,13 +53,13 @@ $white-stripe-height-mobile: 105px;
       font-family: Futura, Helvetica, sans-serif;
       color: $color-steel;
       font-weight: bold;
-      margin: 5px 40px
+      margin: 5px 0;
     }
 
   }
 
   &__button-container {
-    padding: 33px;
+    padding: 33px 0;
   }
 }
 
@@ -75,6 +77,7 @@ $white-stripe-height-mobile: 105px;
   .header {
 
     height: $header-height-mobile;
+    padding: 0 $side-gutter-mobile;
 
     background: linear-gradient(
                     180deg,
@@ -88,13 +91,13 @@ $white-stripe-height-mobile: 105px;
     &__logo {
       &__img {
         height: 110px;
-
+        margin-right: 20px;
 
       }
     }
 
     &__button-container {
-      padding: 21px 21px 0 0;
+      padding: 21px 0;
     }
   }
 }
