Make sure background images cover full size
Compress images

Typo

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -78,7 +78,7 @@
                 guide you through your digital transformation journey as a trusted advisor.
             </p>
             <p>
-                I will support and guide you, sometime even challenge you in order to deliver the very best service.
+                I will support and guide you, sometimes even challenge you in order to deliver the very best service.
             </p>
             <p>
                 With a solid understanding of the construction industry and wealth of knowledge around Procore and its
