--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -7,6 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167945289-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167945289-1');
+    </script>
+    
+
     <title>Bauhaus Consultancy | {% block page_title %}{% endblock %}</title>
 
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}" />
