Change linked in href

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -16,7 +16,7 @@
 
         gtag('config', 'UA-167945289-1');
     </script>
-    
+
 
     <title>Bauhaus Consultancy | {% block page_title %}{% endblock %}</title>
 
@@ -46,7 +46,7 @@
         <div class="footer__section">
             <p>Copyright Bauhaus Consultancy </p>
             <p><a href="{% url 'contact' %}">Contact us</a></p>
-            <a class="footer__social-icon" target="_blank" href="https://uk.linkedin.com/in/andrewxenith/de"><span class="fab fa-linkedin fa-fw"></span></a>
+            <a class="footer__social-icon" target="_blank" href="https://uk.linkedin.com/in/bauhaus-consultancy-2398731a8"><span class="fab fa-linkedin fa-fw"></span></a>
         </div>
         <div class="footer__section">
             <p>Website by <a href="https://www.bonnieappleton.com" target="_blank">Bonnie Appleton</a></p>
