Change procore link

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -16,7 +16,7 @@
 
     <section class="procore-section">
         <h3>We help you get the most out of Procore</h3>
-        <a class="button" href="https://www.procore.com/en-gb/platform" target="_blank">Visit Procore</a>
+        <a class="button" href="https://www.procore.com/en-gb" target="_blank">Visit Procore</a>
     </section>
 
     <section class="content-section">
