--- a/home/static/css/global.css
+++ b/home/static/css/global.css
@@ -245,13 +245,29 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 80px 60px;
   text-align: center;
+  padding: 60px 0;
 }
-@media only screen and (max-width: 570px) {
+@media only screen and (max-width: 768px) {
   .procore-section {
-    padding: 50px 20px;
+    padding: 0;
   }
+}
+
+.video {
+  flex: 1;
+  overflow: hidden;
+  position: relative;
+  height: 0;
+  margin-bottom: 60px;
+  padding-bottom: 56.25%;
+}
+.video__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .section-image {
