--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -47,6 +47,7 @@
             <p>Copyright Bauhaus Consultancy </p>
             <p><a href="{% url 'contact' %}">Contact us</a></p>
             <a class="footer__social-icon" target="_blank" href="https://uk.linkedin.com/in/bauhaus-consultancy-2398731a8"><span class="fab fa-linkedin fa-fw"></span></a>
+            <p><a href="https://www.procore.com/en-gb" target="_blank">Visit Procore</a></p>
         </div>
         <div class="footer__section">
             <p>Website by <a href="https://www.bonnieappleton.com" target="_blank">Bonnie Appleton</a></p>
